fix(styles): fix broken styles due to tailwind module issues
fix broken styles due to tailwind css module issues

--- a/src/components/blog-tile/BlogTile.module.scss
+++ b/src/components/blog-tile/BlogTile.module.scss
@@ -1,11 +1,9 @@
-@layer components {
-  .blog-tile {
-    @media screen and (min-width: 640px) {
-      height: 500px;
-    }
+.blog-tile {
+  @media screen and (min-width: 640px) {
+    height: 500px;
+  }
 
-    @media screen and (min-width: 1024px) {
-      height: 580px;
-    }
+  @media screen and (min-width: 1024px) {
+    height: 580px;
   }
 }
