--- a/src/components/nav-bar/NavBar.module.scss
+++ b/src/components/nav-bar/NavBar.module.scss
@@ -1,19 +1,20 @@
-@layer components {
-  .nav-bar-item {
-    @apply relative p-4 cursor-pointer overflow-hidden;
+.nav-bar-item {
+  @apply relative;
+  @apply p-4;
+  @apply cursor-pointer;
+  @apply overflow-hidden;
 
-    &:hover {
-      @apply text-primary;
-    }
-  }
-
-  .nav-bar-item::before {
-    // TODO: Button animation on hover.
-    // content: '';
-    @apply absolute top-0 left-0 w-full bg-primary h-px transform -translate-x-full transition-all duration-300;
-  }
-
-  .nav-bar-item:hover::before {
-    @apply translate-x-0;
+  &:hover {
+    @apply text-primary;
   }
 }
+
+// .nav-bar-item::before {
+//   // TODO: Button animation on hover.
+//   // content: '';
+//   @apply absolute top-0 left-0 w-full bg-primary h-px transform -translate-x-full transition-all duration-300;
+// }
+
+// .nav-bar-item:hover::before {
+//   @apply translate-x-0;
+// }
